--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^6.0.6",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.7.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
